# dbrx-multi-agent-retail-intelligence

./: .gitignore  CLAUDE.md  DOCUMENTATION_FIXES_SUMMARY.md  DOCUMENTATION_REVIEW_REPORT.md  README.md  config.small.yaml  config.yaml  databricks.yml  pyproject.toml
00-data/: 00-fashion-retail-data.ipynb  00-fashion-retail-data.py  01-generate-reviews.ipynb  01-setup-volumes.py  02-test-pos-generator.py  04-vector-search-create.ipynb  07-test-all-generators.py  09-test-self-contained-generators.py  10-cleanup-notebook.py  10-historical-backfill.py  IMPLEMENTATION_SUMMARY.md  README.data.md  README.md  REVIEW_REPORT.md  TABLE_REVIEW_REPORT.md  fashion-retail-dimension-generator.py  fashion-retail-fact-generator.py  fashion-retail-main.py  fashion-retail-notebook.py  fashion_retail_notebook.py  master_data.py  sales_validator.py
01-vector-store/: 01-create-reviews.ipynb  02-reviews-analysis.ipynb  03-vector-search-config-decision-tree.ipynb  04-create-vector-search.ipynb
02-semantic-layer/: customer_behavior_metric_view_queries.ipynb  customer_behavior_metric_views.ipynb  inventory_metric_view_queries.ipynb  inventory_metric_views.ipynb
03-medallion-pipeline/: README.md
03-sdp-pipelines/: readme.sdp.md
04-genie-rooms/: cross-domain-queries.ipynb
10-genie-rooms/: README.genie.customer-behavior.md  README.genie.inventory.md  README.genie.md  README.md
20-agent-brick/: ka-customer-reviews-setup.md  mas-setup.ipynb  mas-setup.md  mas-setup.v2.md
30-mosaic-tool-calling-agent/: README.md  README.tool-calling-agent.md
50-analysis/: cross-domain.ipynb  (+2 more)
(+207 files in other folders)
