[project]
name = "dbrx-multi-agent-retail-intelligence"
version = "0.1.0"
description = "Multi-agent retail intelligence system with Databricks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
data-gen = [
    "faker>=19.0.0",  # For realistic customer name generation
]
dev = [
    "faker>=19.0.0",
    "pytest>=7.0.0",
]
